# fast_zero

./: pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 57119232f69d_create_todo_table.py  5a20df7c848d_create_users_table.py  5acf2a1c499f_correction_column_update_at_in_users_.py  6416a151f94a_add_column_update_at_in_users_table.py  a0dc1e2b9bdc_add_column_created_at_and_updated_at_in_.py  bd7284829116_create_users_table.py
tests/: test_app.py  test_db.py
